2010-06-13  Murray Cumming  <murrayc@murrayc.com>

	Manual: Use git.gnome.org as the link to the examples source code.

	* docs/manual/libxml++_without_code.xml: Use git.gnome.org for the examples 
	url base, as we do in gtkmm-documentation.

2010-06-13  Murray Cumming  <murrayc@murrayc.com>

	Restore the mm-common make target and update a link.

	* Makefile.am: Restore (and update) the post-html target that was lost when 
	we redid the build system for mm-common.
	* docs/index.html: Change the link to the manual to point to its new location 
	at library.gnome.org.

2.30.1:

2010-05-04  Murray Cumming  <murrayc@murrayc.com>

    Documentation: Don't hide undocumented API.

	* docs/reference/Doxyfile.in: Use the same options as gtkmm (mostly).
    In particular, don't hide undocumented API, such as NodeSet, to fix
    bug #583412 (Hubert Figuiere).

2010-05-04  Murray Cumming  <murrayc@murrayc.com>

	Documentation: Improvements.

	* libxml++/libxml++.h: Expand the main page text, linking to the tutorial
    and to important classes.
	* libxml++/parsers/domparser.h:
	* libxml++/schema.h: Correct the class descriptions.
	* libxml++/parsers/textreader.h: Add a class description.
	* libxml++/nodes/element.h:
	* libxml++/nodes/node.h:
	* libxml++/parsers/saxparser.h:
	* libxml++/validators/schemavalidator.h:
    Correct @newin2p2* to @newin{2,*} now that we use mm-common.

2010-04-27  David King  <davidk@openismus.com>

	Further documentation main page improvements

	* libxml++/libxml++.h: Some minor improvements.

2010-04-23  David King  <davidk@openismus.com>

	Documentation main page improvements

	* libxml++/libxml++.h: Add external links and compilation example.

2010-04-16  David King  <davidk@openismus.com>

	Minor documentation update

	* docs/index.html: Link to latest gnome.org resources.
	* libxml++/libxml++.h: Add minimal documentation for main page.

2010-04-06  Murray Cumming  <murrayc@murrayc.com>

    .pc file: Add datarootdir.
